make stuff actually work